--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "waypoints": "^4.0.1"
   }
 }
